--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 asgiref==3.7.2
-beautifulsoup4==4.12.2
-certifi==2022.12.7
-charset-normalizer==3.1.0
-Django==4.2.3
-idna==3.4
-mysql==0.0.3
-mysqlclient==2.2.0
-requests==2.28.2
-soupsieve==2.4
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+dj-database-url==2.1.0
+Django==5.0.2
+django-cron==0.6.0
+et-xmlfile==1.1.0
+gunicorn==21.2.0
+idna==3.6
+openpyxl==3.1.2
+packaging==24.0
+psycopg2==2.9.9
+requests==2.31.0
+soupsieve==2.5
 sqlparse==0.4.4
-tzdata==2023.3
-urllib3==1.26.15
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
