--- a/viasus/requirements.txt
+++ b/viasus/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 beautifulsoup4==4.12.3
+Brotli==1.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 dj-database-url==2.1.0
@@ -17,3 +18,4 @@ sqlparse==0.4.4
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+whitenoise==6.6.0
