--- a/viasus/requirements.txt
+++ b/viasus/requirements.txt
@@ -3,8 +3,10 @@ beautifulsoup4==4.12.3
 Brotli==1.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+cloudinary==1.40.0
 dj-database-url==2.1.0
 Django==5.0.2
+django-cloudinary-storage==0.3.0
 django-cron==0.6.0
 et-xmlfile==1.1.0
 gunicorn==21.2.0
@@ -14,6 +16,7 @@ packaging==24.0
 pillow==10.4.0
 psycopg2==2.9.9
 requests==2.31.0
+six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
 typing_extensions==4.11.0
